# surge-codesign

./: .gitignore  LICENSE  README.md  environment.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
assets/hopper-v2/: hopper-v2.urdf
assets/mups_v2/: mups_v2.urdf
checkpoints/rainbow_v7/: events.out.tfevents.1770588473.ROB-ARC-03.213278.0  model_0.pt  model_100.pt  model_1000.pt  model_200.pt  model_300.pt  model_400.pt  model_500.pt  model_600.pt  model_700.pt  model_800.pt  model_900.pt
docs/: dev_logs.md
scripts/: collect_gradient_field.py  collect_gradient_field_fd.py  collect_landscape.py  eval_hardware_log.py  play.py  play_policy.py  plot_gradient_field.py  plot_landscape.py  plot_spring_bounds.py  plot_spring_function.py  run_batch.sh  run_cma_codesign.py  run_codesign.py  run_gd_codesign.py  run_guided_es_codesign.py  run_injected_es.py  run_meanshift_es.py  run_surge_codesign.py  train_policy.py
src/legged_gym/: LICENSE  __init__.py
src/legged_gym/envs/: __init__.py
src/legged_gym/scripts/: control_and_play.py
src/legged_gym/utils/: helpers.py  logger.py  (+2 more)
src/mups_codesign/: config.py  data_logger.py  design_objective.py  design_space.py  mups_robot.py  mups_spring.py  objective.py  optim.py  optim_helper.py  vis_helper.py
src/rsl_rl/: LICENSE
src/surge_codesign/: data_logger.py  design_objective.py  design_space.py  mups_robot.py  mups_spring.py  optim_helper.py  vis_helper.py
static/css/: index.css
tests/: test_design_objective.py  test_design_space.py  test_mups_robot.py  test_mups_spring.py  test_policy_gradients.py
(+11 files in other folders)
