[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mups-codesign"
version = "0.1.0"
description = "Differentiable co-design for the MUPS hopping robot"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mups_codesign", "mups_codesign.isaac_env"]
