[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mups-codesign"
version = "0.1.0"
description = "Differentiable co-design for the MUPS hopping robot"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
# Discovers the three sibling packages under src/: mups_codesign, legged_gym, rsl_rl.
where = ["src"]
